# graph-rag-testing

./: .gitignore  .gitmodules  README.md  age  build_apptainer.sh  communities_demo.ipynb  dspy  labels.py  mine_generate.py  mine_generate.sh  mine_results.py  ollama-phi4.def  postgres.env  process.py  process_input.sh  process_stats.py  pyproject.toml  query.py  query_server.py  query_server.service  recursive_louvain.py  server.py  server.service  storage.py  streaming.py  test_age_features.py  test_graph_aggregation_complete.py  test_query_determinism.py  test_timeout_requeue.sh
neo4j/: docker-compose.yml
