[project]
name = "graph-rag-testing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "antlr4-python3-runtime>=4.13.2",
    "dspy>=2.6.13",
    "litellm>=1.65.3",
    "neo4j>=5.28.1",
    "nltk>=3.9.1",
    "psycopg[binary,pool]>=3.2.6",
    "pypdf>=5.4.0",
]
